@@ -76,6 +76,7 @@ Stable versions
 	  (fixes Comic Bakery Remix position 35).
 	- XM: fix Kxx persisting between rows and pattern delay interaction.
 	- XM: fix note without ins# resetting fadeout position and state.
+	- XM: detect more Modplug Tracker XMs via large unused instruments.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
